# cge

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  bar.txt  index.html  search-index.js
.github/workflows/: rust.yml
cge/: index.html
cge/gene/: enum.GeneExtras.html  index.html  struct.Gene.html
cge/network/: index.html  struct.Network.html
cge/transfer/: enum.TransferFunction.html  fn.sigmoid.html  fn.sign.html  fn.threshold.html  index.html
examples/: saveload.rs  simple.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/fmt/: trait.Debug.js
src/: activation.rs  evaluate.rs  file.rs  gene.rs  lib.rs  network.rs  stack.rs  transfer.rs  utils.rs
src/cge/src/: file.rs.html  gene.rs.html  lib.rs.html  network.rs.html  transfer.rs.html  utils.rs.html
src/encoding/: error.rs  functions.rs  mod.rs  v1.rs
src/network/: error.rs  evaluate.rs  mod.rs  utils.rs
test_data/: test_network_multi_output.cge  test_network_recurrent.cge  test_network_v1.cge  with_extra_data_v1.cge
tests/: bar.txt  foo.txt  tests.rs
