[package]
name = "cge"
version = "0.0.1"
authors = [
    "pengowen123 <pengowen816@gmail.com>",
    "MathisWellmann <wellmannmathis@gmail.com>",
]
edition = "2021"
description = "An implementation of the Common Genetic Encoding (CGE) for neural networks."
readme = "README.md"
license = "GPL-3.0"
documentation = "https://docs.rs/cge"
repository = "https://github.com/pengowen123/cge"

[dependencies]
serde_json = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dev-dependencies]
assert_approx_eq = "1.1"
rand = "0.8.5"
