[package]
name = "cge"
version = "0.1.0"
authors = ["pengowen123 <pengowen816@gmail.com>"]
edition = "2018"
rust-version = "1.43"
description = "An implementation of the Common Genetic Encoding (CGE) for directly-encoded neural networks."
readme = "README.md"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/cge"
repository = "https://github.com/pengowen123/cge"

[features]
default = ["serde", "json"]
# Support for de/serialization from/to JSON
json = ["serde", "serde_json"]

[dependencies]
num-traits = "0.2.15"

[dependencies.serde_json]
version = "1.0"
optional = true

[dependencies.serde]
version = "1.0"
optional = true
features = ["derive"]

[dev-dependencies]
assert_approx_eq = "1.1"
rand = "0.8.5"
